force-app/main/default/objects/Account_Event__c/Account_Event__c.object-meta.xml
<CustomObject>
    <label>Account Event</label>
    <nameField>
        <displayFormat>AE-{0000000}</displayFormat>
        <label>Account Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>