force-app/main/default/objects/Account_Event__c/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed?</label>
    <type>Checkbox</type>
</CustomField>